Intermediate changes, fixing number of bugs

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -235,11 +235,9 @@ ul{
 /*---------------------------------
         TABLES
 -----------------------------------*/
-.table-header{
+.table-header th{
     background-color:#87a968;
-    height:38px;
     color:#fff;
-    vertical-align: top !important;
 }
 
 .table{
