Changes to the OpenLayer library for admin and change of google map to v3

--- a/web/src/main/webapp/templates/BasicTemplate.xhtml
+++ b/web/src/main/webapp/templates/BasicTemplate.xhtml
@@ -9,6 +9,7 @@
             #{msg.GENERAL_APP_NAME} v#{msg.GENERAL_VERSION} - <ui:insert name="title"></ui:insert>
         </title>
         <script type="text/javascript" src="#{request.contextPath}/js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/js/jquery-migrate-3.0.0.min.js"></script>
         <script type="text/javascript" src="#{request.contextPath}/js/jquery-ui-1.10.4.custom.min.js"></script>
         <script type="text/javascript" src="#{request.contextPath}/js/jquery.blockUI.js"></script>
 
