--- a/web/src/main/webapp/templates/MapTemplate.xhtml
+++ b/web/src/main/webapp/templates/MapTemplate.xhtml
@@ -16,6 +16,7 @@
 
                 <script src="#{request.contextPath}/js/ol/OpenLayers.js"></script>
                 <script src="#{request.contextPath}/js/ol/ScaleBar.js"></script>
+                <script type="text/javascript" src="#{request.contextPath}/js/proj4.js"></script>
                 <script src="https://maps.google.com/maps/api/js?v=3&amp;key=AIzaSyCReLc9rPj9kPKg1YseVhDKeGt_9z7ZwKk"></script>
                 <script type="text/javascript" src="#{request.contextPath}/js/ext/ext-base.js"></script>
                 <script type="text/javascript" src="#{request.contextPath}/js/ext/ext-all.js"></script>
